_mocha/au-day3/recipe/oneshot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  recipe-api
  namespace: mealmint
  labels:
    app:  recipe-api
spec:
  selector:
    matchLabels:
      app: recipe-api
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  recipe-api
    spec:
      serviceAccountName: reicpe-api
      containers:
      - name:  recipe-api
        image: 471208936033.dkr.ecr.us-east-1.amazonaws.com/recipe-api:v1
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "10"]
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1024Mi
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:8080/healthz || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:8080/healthz || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name:  recipe-api

      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: recipe-api
  namespace: mealmint
spec:
  selector:
    app: recipe-api
  type: ClusterIP
  ports:
  - name: recipe-api
    protocol: TCP
    port: 8080
    targetPort: 8080
